# acoustic-toolbox

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: build-dist.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  test.yml
acoustic_toolbox/: __init__.py  _signal.py  ambisonics.py  atmosphere.py  bands.py  building.py  cepstrum.py  criterion.py  decibel.py  descriptors.py  directivity.py  doppler.py  generator.py  imaging.py  octave.py  quantity.py  reflection.py  room.py  signal.py  utils.py  weighting.py
acoustic_toolbox/standards/: __init__.py  iec_61260_1_2014.py  iec_61672_1_2013.py  iso_1683_2015.py  iso_1996_1_2003.py  iso_1996_2_2007.py  iso_9613_1_1993.py  iso_tr_25417_2007.py
docs/: _signal.md  ambisonics.md  atmosphere.md  bands.md  building.md  cepstrum.md  criterion.md  decibel.md  descriptors.md  directivity.md  directivity_example.nblink  doppler.md  examples.md  generator.md  imaging.md  index.md  octave.md  power.md  pyment.conf  quantity.md  reflection.md  requirements.txt  room.md  signal.md  standards.md  utils.md  weighting.md
docs/examples/: directivity_example.ipynb  example_octave.py  example_signal.py  signal_class.ipynb
docs/javascripts/: readthedocs.js
docs/source/: ambisonics.rst  atmosphere.rst  bands.rst  building.rst  cepstrum.rst  conf.py  criterion.rst  decibel.rst  descriptors.rst  directivity.nblink  directivity.rst  doppler.rst  generator.rst  imaging.rst  index.rst  octave.rst  power.rst  quantity.rst  reference.rst  reflection.rst  room.rst  signal.rst  signal_class.nblink  standards.rst  turbulence.rst  utils.rst  weighting.rst
docs/standards/: iec_61260_1_2014.md  iec_61672_1_2013.md  iso_1683_2015.md  iso_1996_1_2003.md  iso_1996_2_2007.md  iso_9613_1_1993.md  iso_tr_25417_2007.md
examples/: directivity.ipynb  directivity_example.ipynb  example_octave.py  example_signal.py  signal_class.ipynb
tests/: test__signal.py  test_aio.py  test_atmosphere.py  test_bands.py  test_building.py  test_cepstrum.py  test_criterion.py  test_decibel.py  test_descriptors.py  test_directivity.py  test_generator.py  test_imaging.py  test_octave.py  test_power.py  test_room.py  test_signal.py  test_utils.py  test_weighting.py
tests/standards/: test_iec_61672_1_2013.py  test_iso_1996_2_2007.py
