[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "acoustic-toolbox"
version = "0.1.1"
authors = [
    { name = "Valentin LE BESCOND", email = "valentin.lebescond@univ-eiffel.fr" },
    { name = "Andrew Mitchell", email = "a.j.mitchell@ucl.ac.uk"}
]
description = "Acoustic Toolbox module for Python."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.23.5",
    "scipy>=1.14.0",
    "matplotlib>=3.9.1",
    "six>=1.16.0",
    "pandas>=2.2.2",
    "tabulate>=0.9.0",
]

[project.license]
file = "LICENSE"

[project.urls]
"Homepage" = "https://github.com/Universite-Gustave-Eiffel/acoustic-toolbox"
"Bug Tracker" = "https://github.com/Universite-Gustave-Eiffel/acoustic-toolbox/issues"

[project.optional-dependencies]
docs = [
    "sphinx-rtd-theme==1.3.0rc1",
    "sphinx>=1.6, <8",
    "nbsphinx>=0.9.4",
    "nbsphinx-link>=1.3.0",
    "jupyter>=1.0.0",
]

[tool.flit.sdist]
include = ["tests/"]

[tool.rye]
universal = true
dev-dependencies = [
    "ruff>=0.5.5",
    "pytest>=8.3.2",
    "coverage>=7.6.0",
]
